# AvgCloud

./: README.md
development/: readme.txt  runDocker.txt
development/src/: Makefile  avg_server  avg_server.cpp  log  out.file  out_1.file  runclient.sh  runserver.sh  xmlrpc_sample_add_client  xmlrpc_sample_add_server.cpp
docker_dev/: build.sh  xmlrpc_devel.dockerfile
docker_devop/: Dockerfile  Dockerfile_01  runDocker.sh  runDocker.sh_orig  startup.sh
docker_devop/lib/xmlrpc_c/config/: xmlrpc_config.h
proj_PA2/src/: compileAll.py
proj_PA2/src/AVGClient/: CMakeLists.txt  main.cpp
proj_PA2/src/AVGClient/include/: HSS_AvgReqNodeTypeDt.h  avgclient.h
proj_PA2/src/AVGClient/src/: avgclient.cpp
proj_PA2/src/AVGServer/: CMakeLists.txt  main.cpp  make_clean.py
proj_PA2/src/AVGServer/include/: HSS_AvgAuthVectorsTypeDt.h  HSS_AvgAuthenticationVectorDt.h  HSS_AvgResynchInfoDt.h  HSS_AvgUserIdTypeDt.h  avgserver.h
proj_PA2/src/AVGServer/src/: avgserver.cpp
proj_PA2/src/AVGServer/test/: CMakeLists.txt  avgserver_test.cc
proj_PA2/ut/lib/gtest/: gmain.cc  gmock-gtest-all.C
proj_PA2/ut/lib/gtest/gmock/: gmock.h
proj_PA2/ut/lib/gtest/gtest/: gtest.h
